# AphonicChaos.github.io

./: CHANGELOG.md  CNAME  Makefile  README.md  about.rst  aphonic-org.cabal  aphonic.cabal  cabal.project.local  context.json  index.html  portfolio.html  resume.html  site.hs
_site/: about.html  archive.html  contact.html  evolution.html  index.html  portfolio.html  resume.html
_site/css/: default.css  resume.css  syntax.css  theme.css
_site/js/: resume.js  skills.js  syntax.js
_site/posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html  2025-03-11-keeping-busy.html  2025-03-12-site-plans.html  2025-03-13-polyglot-for-life.html  2025-03-13-website.html  2025-03-14-just-a-tease.html  2025-03-19-patina.html  2025-03-20-bookworm-design.html  2025-03-24-structure.html  2025-03-25-camera-no-action.html  2025-03-26-method-chaining.html
app/: Context.hs  Main.hs  Templates.hs
css/: default.css  resume.css  syntax.css  theme.css
js/: resume.js  syntax.js
old/: about.md  portfolio.html  resume.html
old/css/: default.css  theme.css
old/posts/: 2025-03-13-polyglot-for-life.md
old/templates/: post-list.html
posts/: 2025-03-11-keeping-busy.md  2025-03-12-site-plans.md  2025-03-13-polyglot-for-life.md  2025-03-14-just-a-tease.md  2025-03-19-patina.md  2025-03-20-bookworm-design.md  2025-03-24-structure.md  2025-03-25-camera-no-action.md  2025-03-26-method-chaining.md
site/pages/: index.html
site/templates/: default.html  default.mustache  index.mustache  post-list.html  post-list.mustache
templates/: default.html  post-list.html
