cabal-version:      3.6
name:               aphonic-org
version:            0.2.0.0
build-type:         Simple

executable site
  main-is:          site.hs
  build-depends:    
      base ^>= 4.20.0.0
    , hakyll ^>= 4.16.6.0
    , hakyll-typescript ^>= 0.0.2.0
    , hakyll-images ^>= 1.3.0
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
